@@ -1,3 +1,9 @@
+2009-09-03  Glenn Morris  <rgm@gnu.org>
+
+	* mm-util.el (mm-emacs-mule, mm-default-multibyte-p):
+	* rfc2047.el (rfc2047-encode-message-header): Use default-value rather
+	than default-enable-multibyte-characters.
+
 2009-09-02  Glenn Morris  <rgm@gnu.org>
 
 	* gnus-util.el (gnus-float-time): New function.
